[gd_scene load_steps=33 format=3 uid="uid://c288353w57h2r"]

[ext_resource type="Script" path="res://Scripts/npc.gd" id="1_4kjxj"]
[ext_resource type="Texture2D" uid="uid://dd6plfoo34qhy" path="res://Art/char_placeholder.png" id="1_ofrmc"]
[ext_resource type="PackedScene" uid="uid://bllj5ag2u3v4t" path="res://Scenes/death_cutscene.tscn" id="3_vwvn3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_anb7o"]
atlas = ExtResource("1_ofrmc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3djk"]
atlas = ExtResource("1_ofrmc")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvlpk"]
atlas = ExtResource("1_ofrmc")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p44k3"]
atlas = ExtResource("1_ofrmc")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmbf3"]
atlas = ExtResource("1_ofrmc")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42r3p"]
atlas = ExtResource("1_ofrmc")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcwsc"]
atlas = ExtResource("1_ofrmc")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbxq0"]
atlas = ExtResource("1_ofrmc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0ci1"]
atlas = ExtResource("1_ofrmc")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_476ns"]
atlas = ExtResource("1_ofrmc")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iywo4"]
atlas = ExtResource("1_ofrmc")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aqbj"]
atlas = ExtResource("1_ofrmc")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afprx"]
atlas = ExtResource("1_ofrmc")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_or05o"]
atlas = ExtResource("1_ofrmc")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odjt2"]
atlas = ExtResource("1_ofrmc")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q81dl"]
atlas = ExtResource("1_ofrmc")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl23i"]
atlas = ExtResource("1_ofrmc")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_intxn"]
atlas = ExtResource("1_ofrmc")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xq7h"]
atlas = ExtResource("1_ofrmc")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nblh1"]
atlas = ExtResource("1_ofrmc")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04yq0"]
atlas = ExtResource("1_ofrmc")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3u3c"]
atlas = ExtResource("1_ofrmc")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci3fn"]
atlas = ExtResource("1_ofrmc")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_le4b0"]
atlas = ExtResource("1_ofrmc")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lw0u"]
atlas = ExtResource("1_ofrmc")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_de4bm"]
atlas = ExtResource("1_ofrmc")
region = Rect2(320, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qw5g1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anb7o")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3djk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvlpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p44k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmbf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42r3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcwsc")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbxq0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0ci1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_476ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iywo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aqbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afprx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or05o")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odjt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q81dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl23i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_intxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xq7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nblh1")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04yq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3u3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci3fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le4b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lw0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de4bm")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2xy2"]
size = Vector2(13.5, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_au36w"]
radius = 32.0156

[node name="NPC" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_4kjxj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.599998, -9.4)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_qw5g1")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.150002, 1.6)
shape = SubResource("RectangleShape2D_t2xy2")

[node name="DeathCutscene" parent="." instance=ExtResource("3_vwvn3")]
position = Vector2(0.599998, -11.4)

[node name="TalkArea" type="Area2D" parent="."]
position = Vector2(0.599998, -4.4)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_au36w")
debug_color = Color(0.290196, 0.611765, 0.439216, 0.419608)

[connection signal="Dead" from="DeathCutscene" to="." method="_on_death_cutscene_dead"]
[connection signal="DeathCutsceneStarts" from="DeathCutscene" to="." method="_on_death_cutscene_death_cutscene_starts"]
[connection signal="body_entered" from="TalkArea" to="." method="_on_talk_area_body_entered"]
[connection signal="body_exited" from="TalkArea" to="." method="_on_talk_area_body_exited"]
